--- a/pdfViewer/src/main/res/values/strings.xml
+++ b/pdfViewer/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="content_des">PDF PAGE</string>
+    <string name="menu_title_1">Share</string>
 </resources>
